Changed to use absolute positioning since fixed is broken on iOS safari.
http://remysharp.com/2012/05/24/issues-with-position-fixed-scrolling-on-ios/

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -653,7 +653,7 @@ room-sidebar-width = 240px
 
 .navbar
   display none // Initially invisible.
-  position fixed
+  position absolute
   box-sizing border-box
   width room-sidebar-width
   min-height 52px
@@ -1339,7 +1339,7 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
 ///////////////////////////////////////////////////////////
 
 .rooms-sidebar
-  position fixed
+  position absolute
   top 0
   box-sizing border-box
   width room-sidebar-width
@@ -1507,7 +1507,7 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
     margin-right 5px
 
 .current-user-status-bar
-  position fixed
+  position absolute
   display table
   left 0
   bottom 0
@@ -1666,7 +1666,7 @@ room-content-margin-height = 10px
     left 41px
 
   .toggle-sidebar-tab
-    position fixed
+    position absolute
     top 5px
     left 5px
     display block
